Update and rename front/index.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href = "styles.css" type = "text/css" rel = "stylesheet"> 
+    <link href = "front/styles.css" type = "text/css" rel = "stylesheet"> 
     <title>Регистрация</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
             <p /*class = "warning"*/> <i> <b> Your password can be only less then 10 symbols long </b> </i> </p>
             <br>
             <div /*class = "button"*/>
-                <button name = "SEND" type = "submit" onclick = "redirectscript.js"> SEND</button>
+                <button name = "SEND" type = "submit" onclick = "front/redirectscript.js"> SEND</button>
             </div>
         </form>
     </div>
