--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <h4 class="text-uppercase mb-4">About us</h4>
                         <p class="lead mb-0">
                             Order 
-                            <a href="ссылка на наш сайт">food </a>
+                            <a href="https://steamuserimages-a.akamaihd.net/ugc/911323913851863096/A60A8305C54B4262AB3515566BA58F239E18805A/">food </a>
                             and be happy!
                         </p>
                     </div>
